[package]
name = "smartness-cassandra-stress-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
scylla = { version = "1.3.0", features = [
    "chrono-04",
    "time-03",
    "num-bigint-03",
    "num-bigint-04",
    "bigdecimal-04",
    "metrics",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
uuid = { version = "1.17.0", features = ["v1", "v7", "rng"] }
